<resources>
    <string name="app_name">Home For Rent</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="confirmation">Confirmation</string>
    <string name="message">Please enter the verification code that has been sent to your number and submit to confirm your account.</string>
    <string name="last_name">LAST NAME:</string>
    <string name="first_name">FIRST NAME:</string>
    <string name="register">Register</string>
    <string name="email">davie@gmail.com</string>
    <string name="emailAddress">EMAIL:</string>
    <string name="davie">Davie</string>
    <string name="_0772519722">0772519722</string>
    <string name="location">LOCATION:</string>
    <string name="nansana">Nansana</string>
    <string name="enterPassword">password</string>
    <string name="verificationCode">62512</string>
    <string name="submit">SUBMIT</string>
    <string name="code">CODE:</string>
    <string name="login">Login</string>
    <string name="anyuru">Anyuru</string>
    <string name="mail">EMAIL:</string>
    <string name="f_name">Davie</string>
    <string name="tenam">davie@gmail.com</string>
    <string name="phone">PHONE:</string>
    <string name="phNo">0772519722</string>
    <string name="password">PASSWORD:</string>
    <string name="pwd">...........</string>
    <string name="string_pwd">.....</string>
    <string name="amount">Amount</string>
    <string name="payment">Payment</string>
    <string name="blabla">blabla</string>
    <string name="landlord_s_id">Landlord\'s ID</string>
    <string name="_50000">50000</string>
    <string name="landlord">landlord</string>
    <string name="tenant">tenant</string>
    <string name="no_payments_made_yes">No payments made yes</string>
</resources>